# kanban-ai

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  extract_pdf.py  package-lock.json  package.json  pdf_content.txt  pdf_extract.txt  run-dev.bat
backend/: .dockerignore  .env.example  Dockerfile  README.md  check_agent.py  check_agent2.py  check_agent3.py  pyproject.toml  requirements-dev.txt  requirements.txt  run-dev.ps1  uvicorn.err
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_phase2_schema.py  003_add_users.py  004_add_coding_backend.py  004_auto_dispatch.py  005_platform_expansion.py  006_wip_per_developer_index.py  007_auth_oauth_fields.py  008_merge_wip_oauth_heads.py  009_drop_project_name_unique.py  010_add_member_status.py  011_webhook_response_body.py  012_pipeline_cicd.py  013_deployment_phase2.py  014fb7e4d101_merge_migration_heads.py  015_failure_analysis.py  016_devops_monitoring.py  017_drop_rejected_conflict_status.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  deps.py  exceptions.py  llm.py  main.py  models.py  schemas.py  security.py
backend/app/adapters/: __init__.py  base.py  railway_adapter.py  vercel_adapter.py
backend/app/agent/: context_builder.py  graph.py  state.py
backend/app/git/: __init__.py  branch_service.py  git_service.py
backend/app/llm/: __init__.py  factory.py  invoke_helpers.py
backend/app/middleware/: __init__.py  auth.py  error_handlers.py
backend/app/models/: __init__.py  (+33 more)
backend/tests/: conftest.py  test_e2e.py  test_placeholder.py
(+511 files in other folders)
