[project]
name = "kanban-backend"
version = "0.1.0"
description = "FastAPI backend for intelligent work management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "email-validator>=2.0.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "aiosqlite>=0.20.0",
  "alembic>=1.14.0",
  "python-jose[cryptography]>=3.3.0",
  "bcrypt>=4.2.0",
  "python-multipart>=0.0.12",
  "httpx>=0.27.0",
  "openai>=1.55.0",
  "groq>=0.12.0",
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "chromadb>=0.5.0",
]

[tool.uv]
dev-dependencies = []
